# CMakeCourse

./: CMakeLists.txt  defaultconfig.h.in  main.cpp
include/: calc.hpp
lib/: CMakeLists.txt  WIFI.cpp  WIFI.hpp
src/: calc.cpp
